fix image shift

--- a/styles.css
+++ b/styles.css
@@ -168,6 +168,7 @@ video#camera-feed {
     position: fixed;
     left: 30%;
     width: 100%;
+    z-index: 10;
 }
 
 .fancyFont {
@@ -210,6 +211,7 @@ video#camera-feed {
 #composite-photo > img {
     width : 65%;
     height: auto; /*to preserve the aspect ratio of the image*/
+    min-width: 650px;
 }
 
 #photo-instructions {
